js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/field-init-call-expression-bad-reference.js
DONOTEVALUATE
(
)
;
var
C
=
class
{
f
=
(
(
)
=
>
{
}
)
(
)
.
#
x
}
;
